--- a/languages/isset-video-publisher-php.pot
+++ b/languages/isset-video-publisher-php.pot
@@ -9,10 +9,10 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"POT-Creation-Date: 2020-12-03T14:31:15+00:00\n"
+"POT-Creation-Date: 2020-12-07T13:01:40+00:00\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "X-Generator: WP-CLI 2.4.0\n"
-"X-Domain: isset-video-publisher\n"
+"X-Domain: isset-video\n"
 
 #. Plugin Name of the plugin
 #. Author of the plugin
@@ -31,14 +31,8 @@ msgstr ""
 msgid "http://isset.nl/"
 msgstr ""
 
-#: src/Action/Settings/Init.php:48
-#: src/Action/Settings/Menu.php:16
-#: src/Action/Settings/Menu.php:17
-msgid "isset.video settings"
-msgstr ""
-
-#: src/Action/Settings/Init.php:50
-msgid "Enter your settings below:"
+#: src/Plugin.php:321
+msgid "Videos"
 msgstr ""
 
 #: views/admin/dashboard/api-dashboard.php:7
