--- a/plugin/languages/isset-video-en.po
+++ b/plugin/languages/isset-video-en.po
@@ -2,11 +2,11 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: https://wordpress.org/support/plugin/plugin\n"
-"POT-Creation-Date: 2020-12-03T14:17:50+00:00\n"
-"PO-Revision-Date: 2020-12-03 15:19+0100\n"
+"POT-Creation-Date: 2020-12-07T13:01:40+00:00\n"
+"PO-Revision-Date: 2020-12-07 14:08+0100\n"
 "Last-Translator: \n"
 "Language-Team: \n"
-"Language: nl_NL\n"
+"Language: en\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -14,148 +14,142 @@ msgstr ""
 
 #: js/overview/components/admin-copy-text.js:42
 msgid "Copied shortcode"
-msgstr "Shortcode gekopieerd"
+msgstr "Copied shortcode"
 
 #: js/overview/components/admin-video-details.js:127
 msgid "Use the following code to embed this video"
-msgstr "Gebruik de volgende code om de video toe te voegen"
+msgstr "Use the following code to embed this video"
 
 #: js/overview/components/admin-video-details.js:140
 #: js/overview/components/admin-video-overview.js:177
 msgid "Filename"
-msgstr "Bestandsnaam"
+msgstr "Filename"
 
 #: js/overview/components/admin-video-details.js:144
 #: js/overview/components/admin-video-overview.js:178
 msgid "Created"
-msgstr "Aangemaakt"
+msgstr "Created"
 
 #: js/overview/components/admin-video-details.js:148
 msgid "Filesize"
-msgstr "Grootte"
+msgstr "Filesize"
 
 #: js/overview/components/admin-video-details.js:152
 msgid "Length"
-msgstr "Speelduur"
+msgstr "Length"
 
 #: js/overview/components/admin-video-details.js:156
 msgid "Resolution"
-msgstr "Resolutie"
+msgstr "Resolution"
 
 #: js/overview/components/admin-video-details.js:160
 msgid "Presets"
-msgstr "Preset"
+msgstr "Presets"
 
 #: js/overview/components/admin-video-overview.js:109
 msgid "Are you sure you want to delete the selected videos?"
-msgstr "Weet u zeker dat u de geselecteerde video's wilt verwijderen?"
+msgstr "Are you sure you want to delete the selected videos?"
 
 #: js/overview/components/admin-video-overview.js:152
 msgid "Upload New"
-msgstr "Upload Nieuw"
+msgstr "Upload New"
 
 #: js/overview/components/admin-video-overview.js:155
 msgid "Delete Selected"
-msgstr "Verwijder Geselecteerde"
+msgstr "Delete Selected"
 
 #: js/overview/components/admin-video-overview.js:158
 #: js/publisher-video-block.js:236
 msgid "Search"
-msgstr "Zoeken"
+msgstr "Search"
 
 #: js/overview/components/admin-video-overview.js:164
 msgid "Total results"
-msgstr "Totaal aantal resultaten"
+msgstr "Total results"
 
 #: js/overview/components/admin-video-overview.js:174
 msgid "Thumbnail"
-msgstr "Voorbeeld"
+msgstr "Thumbnail"
 
 #: js/overview/components/admin-video-overview.js:175
 msgid "Duration"
-msgstr "Speelduur"
+msgstr "Duration"
 
 #: js/overview/components/admin-video-overview.js:176
 msgid "Size"
-msgstr "Grootte"
+msgstr "Size"
 
 #: js/overview/components/admin-video-overview.js:201
 #: js/publisher-video-block.js:240
 msgid "No publishes found"
-msgstr "Geen videos gevonden"
+msgstr "No videos found"
 
 #: js/overview/components/video-item.js:41 js/publisher-video-block.js:151
 msgid "Processing"
-msgstr "Bezig"
+msgstr "Processing"
 
-#: js/overview/components/video-upload.js:111 js/admin-video-upload.js:167
+#: js/overview/components/video-upload.js:112
 msgid "Successfully added %s to archive"
-msgstr "%s succesvol toegevoegd aan archief"
+msgstr "Successfully added %s to archive"
 
-#: js/overview/components/video-upload.js:113 js/admin-video-upload.js:171
+#: js/overview/components/video-upload.js:114
 msgid "Failed adding %s to archive"
-msgstr "Fout tijdens het toevoegen van %s aan archief"
+msgstr "Failed adding %s to archive"
 
-#: js/overview/components/video-upload.js:115 js/admin-video-upload.js:85
+#: js/overview/components/video-upload.js:116
 msgid "Uploading"
-msgstr "Uploaden"
+msgstr "Uploading"
 
-#: js/overview/components/video-upload.js:121 js/admin-video-upload.js:45
+#: js/overview/components/video-upload.js:122
 msgid "Selected files"
-msgstr "Geselecteerd bestand"
+msgstr "Selected files"
 
-#: js/overview/components/video-upload.js:129 views/admin/upload.php:19
+#: js/overview/components/video-upload.js:130
 msgid "Drop one or more files here (4.3GB max) or browse your computer."
-msgstr ""
-"Sleep hier een of meerdere videobestanden op (4,3GB max) of blader op uw "
-"computer. "
+msgstr "Drop one or more files here (4.3GB max) or browse your computer."
 
-#: js/overview/components/video-upload.js:139
+#: js/overview/components/video-upload.js:140
 msgid ""
 "Storage limit is already reached, please remove videos to upload again or "
 "upgrade your subscription"
 msgstr ""
-"Opslaglimiet is reeds bereikt, verwijder video's om nieuwe video's te kunnen "
-"uploaden, of upgrade uw abonnement."
+"Storage limit has already been reached, please remove videos to upload again "
+"or upgrade your subscription"
 
-#: js/overview/components/video-upload.js:152 views/admin/upload.php:22
+#: js/overview/components/video-upload.js:153
 msgid "Upload"
 msgstr "Upload"
 
-#: js/overview/components/video-upload.js:158 views/admin/upload.php:26
+#: js/overview/components/video-upload.js:159
 msgid "Cancel upload"
-msgstr "Annuleer upload"
+msgstr "Cancel upload"
 
-#: js/overview/components/video-upload.js:162 js/admin-video-upload.js:96
+#: js/overview/components/video-upload.js:163
 msgid "Your files will be queued for transcoding"
 msgstr ""
-"Uw bestanden worden gearchiveerd en omgezet om ze geschikt te maken voor "
-"video streamen. Dit kan enige tijd duren, afhankelijk van bestandsgrootte en "
-"afspeeltijd van het videobestand"
+"Your files will be archived and converted to make them suitable for video "
+"streaming. This will take some time, depending on the size and duration of "
+"the uploaded file"
 
-#: js/overview/components/video-upload.js:166
+#: js/overview/components/video-upload.js:167
 msgid "Uploads Cancelled"
-msgstr "Uploads geannuleerd"
+msgstr "Uploads Cancelled"
 
-#: js/overview/components/video-upload.js:195 views/admin/upload.php:6
+#: js/overview/components/video-upload.js:196
 msgid "Upload new video"
-msgstr "Nieuwe video"
+msgstr "Upload new video"
 
-#: js/overview/components/video-upload.js:205
+#: js/overview/components/video-upload.js:206
 msgid "Upload More"
-msgstr "Meer Uploaden"
-
-#: js/admin-video-upload.js:65
-msgid "Are you sure you want to leave?"
-msgstr "Weet u zeker dat u de pagina wilt verlaten?"
+msgstr "Upload More"
 
 #: js/publisher-video-block.js:158
 msgid "Error"
-msgstr "Fout"
+msgstr "Error"
 
 #: js/publisher-video-block.js:173
 msgid "File nof found"
-msgstr "Video niet gevonden"
+msgstr "File nof found"
 
 #: js/publisher-video-block.js:196
 msgid "Video info"
@@ -163,31 +157,31 @@ msgstr "Video info"
 
 #: js/publisher-video-block.js:198
 msgid "Video name"
-msgstr "Video naam"
+msgstr "Video name"
 
 #: js/publisher-video-block.js:201
 msgid "Video size"
-msgstr "Video grootte"
+msgstr "Video size"
 
 #: js/publisher-video-block.js:207
 msgid "Options"
-msgstr "Opties"
+msgstr "Options"
 
 #: js/publisher-video-block.js:209
 msgid "Autoplay"
-msgstr "Automatisch afspelen"
+msgstr "Autoplay"
 
 #: js/publisher-video-block.js:231
 msgid "Videos on isset.video"
-msgstr "Video's op isset.video"
+msgstr "Videos on isset.video"
 
 #: js/publisher-video-block.js:234
 msgid "Search videos"
-msgstr "Zoeken"
+msgstr "Search videos"
 
 #: js/publisher-video-block.js:244
 msgid "More results"
-msgstr "Meer resultaten"
+msgstr "More results"
 
 #. Plugin Name of the plugin
 #. Author of the plugin
@@ -200,45 +194,38 @@ msgstr "https://isset.video/wp-plugin/"
 
 #. Description of the plugin
 msgid "Wordpress isset.video implementation"
-msgstr "Wordpress isset.video implementatie"
+msgstr "Wordpress isset.video implementation"
 
 #. Author URI of the plugin
 msgid "http://isset.nl/"
 msgstr "http://isset.nl/"
 
-#: src/Action/Settings/Init.php:48 src/Action/Settings/Menu.php:16
-#: src/Action/Settings/Menu.php:17 src/Action/Settings/Init.php:52
-#: src/Action/Settings/Menu.php:18
-msgid "isset.video settings"
-msgstr "isset.video instellingen"
-
-#: src/Action/Settings/Init.php:50 src/Action/Settings/Init.php:54
-#: src/Action/Settings/Init.php:77
-msgid "Enter your settings below:"
-msgstr "Voer hieronder je instellingen van de publisher in"
+#: src/Plugin.php:321
+msgid "Videos"
+msgstr "Videos"
 
 #: views/admin/dashboard/api-dashboard.php:7
 #: views/admin/dashboard/dashboard.php:6
 msgid "Storage used"
-msgstr "Opslag in gebruik"
+msgstr "Storage used"
 
 #: views/admin/dashboard/api-dashboard.php:14
 #: views/admin/dashboard/dashboard.php:10
 msgid "Data streamed"
-msgstr "Data gestreamed"
+msgstr "Data streamed"
 
 #: views/admin/dashboard/api-dashboard.php:23
 msgid "Logged in as"
-msgstr "Ingelogd als"
+msgstr "Logged in as"
 
 #: views/admin/dashboard/api-dashboard.php:25
 #: views/admin/dashboard/dashboard.php:14 views/admin/page.php:6
 msgid "Logout"
-msgstr "Uitloggen"
+msgstr "Logout"
 
 #: views/admin/dashboard/api-dashboard.php:31
 msgid "Subscription type"
-msgstr "Abonnement type"
+msgstr "Subscription type"
 
 #: views/admin/dashboard/api-dashboard.php:48
 msgid "Views"
@@ -250,106 +237,72 @@ msgstr "Data"
 
 #: views/admin/dashboard/api-dashboard.php:74
 #: views/admin/dashboard/dashboard.php:18
-#: views/admin/dashboard/api-dashboard.php:70
 msgid "Login to isset.video"
-msgstr "Inloggen op isset.video"
+msgstr "Login to isset.video"
 
 #: views/admin/dashboard/dashboard.php:3
 msgid "Logged in as %s"
-msgstr "Ingelogd als %s"
+msgstr "Logged in as %s"
 
 #: views/admin/dashboard/dashboard.php:15 views/admin/page.php:7
-#: views/admin/upload.php:42
 msgid "Go to videos"
-msgstr "Naar video's"
+msgstr "Go to videos"
 
 #: views/admin/input.php:6
 msgid "Unsupported type"
-msgstr "Type niet ondersteund"
+msgstr "Unsupported type"
 
 #: views/admin/overview.php:7
 msgid "Your Videos"
-msgstr "Uw Video's"
+msgstr "Your Videos"
 
 #: views/admin/page.php:4
 msgid "Hi, %s"
-msgstr "Hallo %s"
+msgstr "Hi, %s"
 
 #: views/admin/page.php:5
 msgid ""
 "You are now connected to my.isset.video. Click the button below to unlink "
 "your account and logout."
 msgstr ""
-"U bent nu verbonden met my.isset.video. Klik op de knop hieronder om uw "
-"account te ontkoppelen en uit te loggen."
+"You are now connected to my.isset.video. Click the button below to unlink "
+"your account and logout."
 
 #: views/admin/page.php:11 views/admin/page.php:13
 msgid "Connect to my.isset.video"
-msgstr "Verbinden met my.isset.video"
+msgstr "Connect to my.isset.video"
 
 #: views/admin/page.php:12
 msgid ""
 "Please connect your my.isset.video account by clicking the button below. We "
 "will redirect you to my.isset.video to ask for your permission."
 msgstr ""
-"Verbind met uw my.isset.video account door op de knop hieronder te klikken. "
-"U wordt doorverwezen naar my.isset.video om hiervoor toestemming te vragen."
+"Please connect your my.isset.video account by clicking the button below. We "
+"will redirect you to my.isset.video to ask for your permission."
 
 #: views/shortcode/publish-invalid.php:3
 msgid "Video is not available"
-msgstr "Deze video kan niet geladen worden"
+msgstr "Video is not available"
 
 #: views/shortcode/publish.php:7
 msgid "Your browser does not support the video tag."
-msgstr "Jouw browser ondersteund geen videos"
+msgstr "Your browser does not support the video tag."
 
 #: views/shortcode/publish.php:12
 msgid "Video cannot be loaded"
-msgstr "Deze video kan niet geladen worden"
+msgstr "Video cannot be loaded"
 
-#: src/Action/Settings/Init.php:61
-msgid "Show advanced options"
-msgstr "Laat geavanceerde opties zien"
+#~ msgid "Are you sure you want to leave?"
+#~ msgstr "Are you sure you want to leave?"
 
-#: src/Action/Settings/Init.php:75
-msgid "Advanced settings"
-msgstr "Geavanceerde opties"
+#~ msgid "isset.video settings"
+#~ msgstr "isset.video settings"
 
-#: views/admin/upload.php:35
-msgid ""
-"Storage limit is already reached, please remove video's to upload again or "
-"upgrade your subscription"
-msgstr ""
-"Opslaglimiet is reeds vereikt, verwijder video's om nieuwe video's te kunne "
-"uploaden of upgrade uw abonnement."
+#~ msgid "Enter your settings below:"
+#~ msgstr "Enter your settings below:"
 
-#~ msgid "Upload New Videos"
-#~ msgstr "Upload Nieuwe Videos"
+#~ msgid "Show advanced options"
+#~ msgstr "Show advanced options"
 
-#~ msgid "New Video"
-#~ msgstr "Nieuwe Video"
-
-#~ msgid "Publisher preview"
-#~ msgstr "Preview"
-
-#~ msgid "Use this shortcode in a post to include the video."
-#~ msgstr ""
-#~ "Je kan deze shortcode in een bericht gebruiken om de video te tonen."
-
-#~ msgid "Import from publisher"
-#~ msgstr "Importeer"
-
-#~ msgid "Parent Videos:"
-#~ msgstr "Hoort hij:"
-
-#~ msgid "No videos found in Trash."
-#~ msgstr "Geen videos gevonden tussen deze rommel"
-
-#, fuzzy
-#~ msgid "Isset Video Publisher plugin"
-#~ msgstr "Video publisher instellingen"
-
-#~ msgid "Video integration from the video publisher from isset.video"
-#~ msgstr ""
-#~ "Video integratie, gemaakt voor de video publisher gemaakt door Isset "
-#~ "Internet Professionals"
+#~ msgid "Advanced settings"
+#~ msgstr "Advanced settings"
